--- a/.github/workflows/merge_hourly.yml
+++ b/.github/workflows/merge_hourly.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add merged/*.json
+          git add data/merged/*.json
           git diff --cached --quiet || git commit -m "Hourly merged calibration datasets"
           git push
