--- a/.github/workflows/merge_hourly.yml
+++ b/.github/workflows/merge_hourly.yml
@@ -39,4 +39,5 @@ jobs:
           git config user.email "github-actions@github.com"
           git add data/merged/*.json
           git diff --cached --quiet || git commit -m "Hourly merged calibration datasets"
+          git pull --rebase origin main  # integrate any new commits
           git push
